--- a/Styles/login.css
+++ b/Styles/login.css
@@ -66,7 +66,8 @@ header {
   width: 25px;
 }
 body{
-    background-image: url(./book-library-with-open-textbook.jpg);background-repeat: no-repeat; 
+    background-image: url(/Assests/book-library-with-open-textbook.jpg);
+    background-repeat: no-repeat; 
     background-size: cover;
 }
 .centerLogin{
