--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,6 +2,18 @@
   margin: 0px;
   padding: 0px;
 }
+#preloader{
+    background: #000 url(../Assests/pre.gif) no-repeat center center fixed;
+    background-size:30%;
+    position:fixed;
+    z-index: 100;
+    width: 100%;
+    height: 100vh;
+}
+
+iframe{
+  display: none;
+}
 
 header {
   background-color: #ffffff;
